# netevolve

./: LICENSE  README.md  agent.py  agent_policy.py  config.py  data_loader.py  env.py  init_real_data.py  model.param.data.fast  optim.py  optimize_reward.py  proposed_attr_auc.npy  proposed_attr_auc2.npy  proposed_attr_dblp_auc.npy  proposed_attr_dblp_nll.npy  proposed_attr_nips_auc.npy  proposed_attr_nips_nll.npy  proposed_attr_nll.npy  proposed_attr_nll2.npy  proposed_edge_auc.npy  proposed_edge_auc2.npy  proposed_edge_dblp_auc.npy  proposed_edge_dblp_nll.npy  proposed_edge_nips_auc.npy  proposed_edge_nips_nll.npy  proposed_edge_nll.npy  proposed_edge_nll2.npy  pyproject.toml  rl.py
data/DBLP/: A0.mat  A1.mat  A10.mat  A2.mat  A3.mat  A4.mat  A5.mat  A6.mat  A7.mat  A8.mat  A9.mat  G0.mat  G1.mat  G10.mat  G2.mat  G3.mat  G4.mat  G5.mat  G6.mat  G7.mat  G8.mat  G9.mat  adj_orig_dense_list.pickle  adj_time_list.pickle
data/NIPS/: 0A.txt  0X.txt  10A.txt  10X.txt  11A.txt  11X.txt  12A.txt  12X.txt  13A.txt  13X.txt  14A.txt  14X.txt  15A.txt  15X.txt  16A.txt  16X.txt  17A.txt  17X.txt  1A.txt  1X.txt  2A.txt  2X.txt  3A.txt  3X.txt  4A.txt  4X.txt  5A.txt  5X.txt  6A.txt  6X.txt  7A.txt  7X.txt  8A.txt  8X.txt  9A.txt  9X.txt  A0.mat  A1.mat  A10.mat  A11.mat  (+32 more)
data/twitter/: A1.mat  A10.mat  A11.mat  A12.mat  A2.mat  A3.mat  A4.mat  A5.mat  A6.mat  A7.mat  A9.mat
